# bitvm2-gc

./: .gitignore  Cargo.toml  README.md
bristol/: Cargo.toml
bristol/src/: bristol.rs  lib.rs
bristol/src/bristol-examples/: adder64.txt  multiplier64.txt  selector.txt  subtracter64.txt
garbled-snark-verifier/: Cargo.toml
garbled-snark-verifier/src/: lib.rs
garbled-snark-verifier/src/circuits/: basic.rs  dv_snark.rs  groth16.rs  mod.rs
garbled-snark-verifier/src/circuits/bigint/: add.rs  cmp.rs  mul.rs  utils.rs
garbled-snark-verifier/src/circuits/bn254/: finalexp.rs  fp254impl.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  g1.rs  g2.rs  pairing.rs  utils.rs
garbled-snark-verifier/src/circuits/sect233k1/: blake3_ckt.rs  builder.rs  curve_ckt.rs  curve_ref.rs  curve_scalar_mul_ckt.rs  dv_ckt.rs  dv_ref.rs  fr_ckt.rs  fr_ref.rs  gf9_ckt.rs  gf9_eval_ckt.rs  gf9_ref.rs  gf_ckt.rs  gf_interpolate_ckt.rs  gf_mul_ckt.rs  gf_ref.rs  mod.rs  types.rs
garbled-snark-verifier/src/core/: circuit.rs  gate.rs  s.rs  utils.rs  wire.rs
garbled-snark-verifier/src/dv_bn254/: basic.rs  dv_ckt.rs  dv_ref.rs  dv_snark.rs  fp254impl.rs  fq.rs  fr.rs  g1.rs  hinted_double_sm.rs  mod.rs  scalar_mul.rs  types.rs
garbled-snark-verifier/src/dv_bn254/bigint/: add.rs  cmp.rs  mod.rs  mul.rs  utils.rs
guest/: Cargo.toml
guest/src/: main.rs
host/: Cargo.toml
host/src/: main.rs
verifiable-circuit/: Cargo.toml
verifiable-circuit-host/: Cargo.toml  build.rs
verifiable-circuit-host/examples/: gen-sub-circuits.rs
verifiable-circuit-host/src/: bn254_dv_snark.rs  dummy_circuit.rs  dv_snark.rs  main.rs  mem_fs.rs  simple_circuit.rs  utils.rs
verifiable-circuit-host/src/data/: dv-proof
verifiable-circuit-host/src/data/bn254/: dv-proof
verifiable-circuit-host/src/data/sect233k1/: dv-proof
verifiable-circuit/src/: main.rs
