[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"
repository = "https://github.com/GOATNetwork/verifiable-circuit"
keywords = ["Bitcoin", "zkRollup", "zkVM", "BitVM3"]
categories = ["cryptography"]

[workspace]
members = [
    "bristol",
    "garbled-snark-verifier",
    "verifiable-circuit",
    "verifiable-circuit-host",
]

resolver = "2"

[workspace.dependencies]
garbled-snark-verifier = { path = "./garbled-snark-verifier" }
bristol = { path = "./bristol" }
zkm-build = { git = "https://github.com/ProjectZKM/Ziren" }
zkm-sdk = { git = "https://github.com/ProjectZKM/Ziren" }
zkm-zkvm = { git = "https://github.com/ProjectZKM/Ziren" }
poseidon2 = { git = "https://github.com/ProjectZKM/poseidon2" }
bincode = "1.3.3"
sha2 = "0.10.8"

[profile.release]
opt-level = 3
[profile.bench]
opt-level = 3

[profile.fast]
inherits = "release"
debug = true
debug-assertions = true

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/ziren-patches/curve25519-dalek", branch = "patch-4.1.3" }
ecdsa-core = { git = "https://github.com/ziren-patches/signatures", package = "ecdsa", branch = "patch-ecdsa-0.16.9" }
rsa = { git = "https://github.com/ziren-patches/RustCrypto-RSA.git", branch = "patch-rsa-0.9.6" }
secp256k1 = { git = "https://github.com/ziren-patches/rust-secp256k1", branch = "patch-0.29.1" }
sha2 = { git = "https://github.com/ziren-patches/RustCrypto-hashes", branch = "patch-sha2-0.10.8" }
substrate-bn = { git = "https://github.com/ziren-patches/bn", branch = "patch-0.6.0" }
k256 = { git = "https://github.com/ziren-patches/elliptic-curves", branch = "patch-k256-0.13.4" }
p256 = { git = "https://github.com/ziren-patches/elliptic-curves", branch = "patch-p256-0.13.2" }
