[package]
name = "garbled-snark-verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
num-traits = "0.2.18"
num-bigint = { version = "0.4.4", features = ["rand"] }
rand = "0.8.5"
rand_chacha = { version = "0.3", default-features = false }
itertools = "0.13.0"
ark-bn254 = { version = "0.5.0", features = ["curve", "scalar_field"], default-features = false }
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-crypto-primitives = "0.5.0"
ark-relations = "0.5.0"
serial_test = "3.2.0"
once_cell = "1.21.3"
getrandom = { version = "0.2", features = ["custom"], optional = true }
blake3 = "1.6.1"
sha2 = { workspace = true, optional = true }
poseidon2 = { workspace = true, optional = true }
aes = { version = "0.8.4", optional = true }
ark-serialize = { version = "0.5.0", default-features = false, features = ["derive"] }

bincode = { workspace = true }
rayon = "1.10.0"

[dev-dependencies]
ark-groth16 = "0.5.0"
ark-std = { version = "0.5.0", default-features = false, features = ["print-trace"] }
xs233-sys = { git = "https://github.com/blake-pro/xs233-sys.git" }

[features]
default = []
garbled = []
_sha2 = ["sha2"]
_poseidon2 = ["poseidon2"]
_blake3 = []
_aes = ["aes"]
_getrandom = ["getrandom/custom"]
