[package]
name = "verifiable-circuit-host"
version = "0.0.1" 
edition = "2024" 
default-run = "verifiable-circuit-host"
publish = false

[dependencies]
hex = "0.4.3"
zkm-sdk = { git = "https://github.com/ProjectZKM/Ziren" } 

[build-dependencies]
zkm-build = { git = "https://github.com/ProjectZKM/Ziren" } 

[[bin]]
name = "verifiable-circuit-host"
path = "src/main.rs"

# [features]
# cuda = ["zkm-sdk/cuda"]