[package]
name = "verifiable-circuit-host"
version = "0.0.1" 
edition = "2024" 
default-run = "verifiable-circuit-host"
publish = false

[dependencies]
zkm-sdk = { workspace = true }
garbled-snark-verifier = { workspace = true, features = ["_poseidon2", "garbled", "_getrandom"] }
ark-bn254 = { version = "0.5.0", features = ["curve", "scalar_field"], default-features = false }
ark-ff = "0.5.0"
bincode = { workspace = true }

[build-dependencies]
zkm-build = { workspace = true } 

[[bin]]
name = "verifiable-circuit-host"
path = "src/main.rs"

# [features]
# cuda = ["zkm-sdk/cuda"]