[package]
name = "verifiable-circuit-host"
version = "0.0.1" 
edition = "2024" 
default-run = "verifiable-circuit-host"
publish = false

[dependencies]
zkm-sdk = { workspace = true }
garbled-snark-verifier = { workspace = true, features = ["_sha2", "garbled", "_getrandom"] }
ark-bn254 = { version = "0.5.0", features = ["curve", "scalar_field"], default-features = false }
ark-ff = "0.5.0"
bincode = { workspace = true }
num-bigint = { version = "0.4.4", features = ["rand"] }

tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rand = "0.8.5"
rand_chacha = { version = "0.3", default-features = false }
ark-groth16 = "0.5.0"
ark-std = { version = "0.5.0", default-features = false }
ark-crypto-primitives = "0.5.0"
ark-relations = "0.5.0"
ark-ec = "0.5.0"
ark-serialize = { version = "0.5.0", default-features = false, features = [ "derive" ] }

[build-dependencies]
zkm-build = { workspace = true } 

[[bin]]
name = "verifiable-circuit-host"
path = "src/main.rs"

# [features]
# cuda = ["zkm-sdk/cuda"]