[package]
name = "verifiable-circuit"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
zkm-zkvm = { workspace = true }
garbled-snark-verifier = { workspace = true }
ark-bn254 = { version = "0.5.0", features = ["curve", "scalar_field"], default-features = false }
ark-ff = "0.5.0"

[features]
sha2 = ["garbled-snark-verifier/garbled", "garbled-snark-verifier/_sha2", "garbled-snark-verifier/_getrandom"]
poseidon2 = ["garbled-snark-verifier/garbled", "garbled-snark-verifier/_poseidon2", "garbled-snark-verifier/_getrandom"]
blake3 = ["garbled-snark-verifier/garbled", "garbled-snark-verifier/_blake3", "garbled-snark-verifier/_getrandom"]

default = ["sha2"]
